--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ flask-marshmallow = "*"
 flask-jsonpify = "*"
 pipfile = "*"
 flask-cors = "*"
+gunicorn = "*"
 
 [requires]
 python_version = "3.7"
