--- a/Pipfile
+++ b/Pipfile
@@ -6,16 +6,13 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-flask = "*"
-flask-sqlalchemy = "*"
-psycopg2 = "*"
-pg8000 = "*"
-requests = "*"
-flask-marshmallow = "*"
-flask-jsonpify = "*"
-pipfile = "*"
-flask-cors = "*"
-gunicorn = "*"
+flask-marshmallow = "==0.12.0"
+postgres = "==3.0.0"
+psycopg2 = "==2.8.5"
+Flask = "==1.1.2"
+Flask-Cors = "==3.0.8"
+Flask-Jsonpify = "==1.5.0"
+Flask-SQLAlchemy = "==2.4.3"
 
 [requires]
-python_version = "3.7"
+python_version = "3.8"
